# cosydb

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TableDef.txt  a.in  clean  cmake_install.cmake  cosydb.cpp  cosydb.h  dbclient.cpp  parser  parser.cpp  parser.h
notes/: 1.开动.txt  2.写parser.txt  3.改成服务器模式并且加客户端.txt  4.数据库服务器第一条命令.txt
test/: TableDef.txt  TableDef.txt.0804.1  TableDef.txt.UDT_BOOL  TableDef.txt.array  a.in  a.in.0804.1  a.in.UDT_BOOL  a.in.array
